# LitKG

./: .cursorrules  .gitignore  LICENSE  Makefile  README.md  env.template  pyproject.toml
cache/: .gitkeep
config/: config.yaml
data/knowledge_base/vector_store/: index.faiss
data/processed/: .gitkeep  integrated_knowledge_graph.gpickle
data/raw/: .gitkeep
docs/: LangChain_Integration_Plan.md  Phase1_README.md  Phase2_README.md
logs/: .gitkeep
notebooks/: README.md
scripts/: example_conversational_agents.py  example_entity_linking.py  example_kg_preprocessing.py  example_langchain_integration.py  example_literature_processing.py  example_ml_integration.py  example_novel_discovery_system.py  example_ollama_integration.py  example_phase2_hybrid_gnn.py  example_phase3_confidence_scoring.py  litkg_cli.py  phase1_integration.py  setup_models.py
src/litkg/: __init__.py  cli.py
src/litkg/agents/: __init__.py  agent_orchestrator.py  biomedical_rag_agent.py  hypothesis_agent.py  knowledge_graph_agent.py  literature_agent.py  research_planner_agent.py
src/litkg/langchain_integration/: __init__.py  enhanced_literature_processor.py  llm_entity_extractor.py
src/litkg/llm_integration/: __init__.py  biomedical_prompts.py  model_selection.py  ollama_integration.py  unified_llm_interface.py
src/litkg/models/: __init__.py  embeddings.py  huggingface_models.py  pytorch_models.py
src/litkg/phase1/: __init__.py  entity_linker.py  kg_preprocessor.py  literature_processor.py
src/litkg/phase2/: __init__.py  attention_mechanisms.py  data_loader.py  graph_construction.py  hybrid_gnn.py  training.py
src/litkg/phase3/: __init__.py  confidence_scoring.py  hypothesis_generation.py  novelty_detection.py  validation.py
src/litkg/utils/: __init__.py  config.py  logging.py
test_reports/: coverage.json  junit.xml  test_report.json
tests/: __init__.py  conftest.py  test_agents.py  test_llm_integration.py  test_phase1.py  test_phase2.py  test_phase3.py  test_runner.py
